--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SOTA Chaser</title>
     <link data-trunk rel="css" href="style.css" />
     <link data-trunk rel="rust" href="Cargo.toml" />
+    <script defer src="https://analytics.daweslab.com/script.js" data-website-id="82867f15-c199-4560-a7d3-56e524031abd"></script>
   </head>
   <body>
   </body>
